--- a/css/quis.css
+++ b/css/quis.css
@@ -10,6 +10,8 @@
 .w3-left-align{text-align:left!important}.w3-right-align{text-align:right!important}.w3-justify{text-align:justify!important}.w3-center{text-align:center!important}
 
 .quiz1left {
+
+    display: table;
     height: 100%;
 	  width: 70%;
     font-size: 30px;
@@ -26,9 +28,9 @@
 }*/
 
 .quiz1right {
+    display: block;
     text-align: center;
-    margin-left: 70%;
-    font-size: 18px;
+    font-size: 16px;
     padding-top: 5%;
     padding-left: 2%;
     padding-right: 2%;
@@ -92,8 +94,8 @@
   transition-delay: 0.15s;
 }
 .radio1 {
-border: 1px;
-box-shadow: 0px 0px 10px #000000;
+border: 2px;
+box-shadow: 0px 0px 5px #000000;
 float: left;
 margin: 10px;
 margin-top: 30px;
@@ -102,9 +104,18 @@ height: 200px;
 width: 140px;
 }
 
+.radio1:hover {
+  box-shadow: 0px 0px 10px #000000;
+}
+
+.row1 {
+display: table;
+height: 100%;
+
+}
+
 .row1:after {
     content: '';
-    display: block;
     clear: both;
 }
 
@@ -133,6 +144,8 @@ width: 140px;
   font-size: 20px;
   margin-left: 10%;
 }
+
+
 
 #inputText {
   margin-left: 5%;
@@ -168,6 +181,7 @@ width: 140px;
 
 .q2 {
   margin-top: 7%;
+  margin-bottom: 15%;
 }
 
 
@@ -213,7 +227,7 @@ width: 140px;
 }
 .radio2 {
   border: 2px;
-  box-shadow: 0px 0px 10px #000000;
+  box-shadow: 0px 0px 5px #000000;
   font-size: 18px;
   margin-left: 5%;
   margin-right: 5%;
@@ -224,9 +238,15 @@ width: 140px;
 
 }
 
+.radio2:hover {
+  /*background-color:rgba(211, 211, 211, 0.5);*/
+  box-shadow: 0px 0px 10px #000000;
+}
+
 .button-q4{
+  margin-top: 10%;
   margin-bottom: 5%;
-  margin-top: 15%;
+  
 }
 
 .check-q5 {
@@ -259,10 +279,7 @@ width: 140px;
 
 }
 
-.radio2:hover {
-  box-shadow: 0px 0px 0px #000000;
-  background-color:rgba(211, 211, 211, 0.5);
-}
+
 
 .q5 label {
   width: 100%
@@ -273,11 +290,6 @@ width: 140px;
 }
 
 
-
-
-.right_footer {
-  margin-top: 40%;
-}
 
 .right_footer:after  {
   content: '';
@@ -295,10 +307,79 @@ width: 140px;
   font-size: 14px;
 }
 
+
+.q3 {
+  margin-top: 10%;
+  margin-bottom: 10%;
+  margin-left: 5%;
+  margin-right: 5%;
+ 
+ 
+}
+
+
+/*.q3:after {
+  content: '';
+  display: block;
+  clear: both;*/
+
+}
+
 .q3_street {
   font-size: 18px;
+  margin-bottom: 10%;
+  margin-top: 2%;
+  
+}
+
+.q3_street {
+  box-shadow: 0px 0px 5px #000000;
+ 
+}
+
+.q3_street:hover {
+  box-shadow: 0px 0px 10px #000000;
+ 
+}
+
+.q3_street:after {
+  content: '';
+  display: block;
+  clear: both;
 }
 
 .q3_home {
   font-size: 18px;
+ 
 }
+
+
+
+#q_additional_content {
+  display: table;
+  height: auto;
+}
+
+.right_img img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.right_text {
+  margin-bottom: 5%;
+  padding-left: 3%;
+  padding-right: 3%;
+}
+
+.q3_street_img {
+ float: left;
+}
+
+.q3_street_text {
+  font-size: 18px;
+  align: center;
+  padding-top: 10%;
+}
+
+
