--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11,6 +11,14 @@
 	.form{ margin:0 0 0 20px}
 	.main-nav{ display:block !important; }
 	/*.portfolioContainer{ width:800px; margin:0px auto !important; } */
+	.okno  {width:992px; height: 700px;}
+	.quiz1left {width: 70%;height: 700px;}
+	/*.button-q4 {margin-top: 0%;}*/
+	.q2 {height: 300px;}
+	.q3 {height: 300px;}
+	.q4 {height: 300px;}
+	.q5 {height: 300px;}
+	
 
 }
 
@@ -38,9 +46,9 @@
 	.main-nav li a{ padding:8px 15px;}
 	/*.portfolioContainer{ width:750px; margin:0px auto !important; }
 	.Portfolio-box{ height:250px;}*/
-
-
-
+	.okno  {width:100%;}
+	.quiz1left {width: 70%;}
+	
 }
 
 @media only screen and (max-width: 767px) {
@@ -88,7 +96,11 @@
 	.isotope{ width:400px; margin:0px auto;}
 	.Portfolio-box{}
 	.portfolioContainer{ width:350px; margin:0px auto !important; } */
-
+	.okno  { width:100%;}
+	.quiz1left {width: 100%;}
+	.quiz1right{width: 100%;}
+	table {font-size:12px;padding:3px;}
+	
 
 }
 
@@ -102,5 +114,20 @@
 	.Portfolio-box{  max-width:300px !important; width:96.4% !important; margin:0 !important}
 	.Portfolio-box img { max-width:100%;}
 	.portfolioContainer{ width:280px !important; margin:0 auto !important }
+	.okno  { width:100%;}
+	.quiz1left {width: 100%;}
+	.quiz1right{width: 100%;}
+	table {font-size:12px;padding:3px;}
+
 
 }
+
+
+
+@media only screen and (max-device-width : 768px) and (orientation : portrait) {
+	.alert {display:block;}
+	.korzina {display: none;}
+	
+	
+ }
+
